--- a/backend/package.json
+++ b/backend/package.json
@@ -5,10 +5,10 @@
   "main": "server.js",
 
   "scripts": {
-    "start": "node backend/server.js",
+    "start": "node server.js",
     "server": "nodemon backend/server.js",
     "client": "npm start --prefix frontend",
-    "build": "cd backend && npm install && cd ../frontend && npm install && npm run build"
+    "build": "npm install && cd ../frontend && npm install && npm run build"
   },
   "keywords": [],
   "author": "",
