--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "node server.js",
     "server": "nodemon backend/server.js",
     "client": "npm start --prefix frontend",
-    "build": "npm install && cd ../frontend && npm install && npm run build"
+    "build": "cd backend && npm install && cd ../frontend && npm install && npm run build"
   },
   "keywords": [],
   "author": "",
