--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
 
   "scripts": {
-    "start": "node server.js",
+    "start": "node backend/server.js",
     "server": "nodemon backend/server.js",
     "client": "npm start --prefix frontend",
     "build": "cd backend && npm install && cd ../frontend && npm install && npm run build"
